2017-04-18  Richard Larsson  <ric.larsson@gmail.com>

	* typhon/arts/internals.py: Added and moved internal classes over
	
	* typhon/arts/utils.py: Moved as_quantumnumbers here
	
	* typhon/arts/catalogues.py: Removed ARTSCAT5, PartitionFunctions,
	LineMixing, PressureBroadening, Rational and all imports not related
	to these
	
	* {typhon/arts/types.py,doc/typhon.arts.rst}: mimics catalogues for 
	internals.py classes

2017-04-13  Lukas Kluft  <lukas.kluft@gmail.com>

	* doc/conf.py: Added numpy yo list of interpshinx packages.

	Intersphinx now links to the Python 3.6 documentation.

	* typhon/math/common.py (integrate_column):

	Improved documentation of input parameters. Added an example to
	the docstring.

2017-04-13  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/math/common.py:

	* (integrate_column): Use `np.trapz` for integration.

	This allows more flexible usage of the function (e.g.
	multidimensional input).

	* (interpolate_halflayers):

	Function to return linear interpolated values for halflayers.

	* typhon/atmosphere.py (iwv): Support multidimensional input.

	* typhon/tests/test_atmosphere.py:

	Added a test for mutlidimensional input to `atmosphere.iwv()`.

	* doc/typhon.math.rst: Added `interpolate_halfleves`.

	* doc/typhon.utils.rst: Removed `print_timing`.

2017-04-12  Oliver Lemke  <olemke@core-dump.info>

	* typhon/atmosphere.py (relative_humidity): Test successful.

2017-04-12  Oliver Lemke  <olemke@core-dump.info>

	* typhon/atmosphere.py (relative_humidity):

	Intentional temporary breakage to test hudson failure mail.

2017-04-12  Oliver Lemke  <olemke@core-dump.info>

	* Dummy commit to test build trigger to automatically run test suite on
	typhon commits.

2017-04-12  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/utils/__init__.py (print_timing):

	Removed decorator `print_timing`.

	`Timer` objects can be used as function decorators instead.

2017-04-11  Gerrit Holl  <g.holl@reading.ac.uk>
